# customer_service

./: .env  .server.env  Dockerfile  docker-compose.yml  models.py  pyproject.toml  requirements.txt
base/: models.py
base/migrations/: 0001_initial.py  0001_squashed_0001_initial.py  0002_remove_basebank_bank_id_and_more.py  0003_alter_basecities_rayan_city_id_and_more.py  0004_alter_baseprovince_name.py  0005_alter_basecities_name_alter_basecountries_name_and_more.py  0006_alter_basecities_name.py  0007_rename_rayan_bank_id_basebankbranch_rayan_branch_id_and_more.py  0008_alter_basebankbranch_rayan_branch_id.py  0009_alter_basebankbranch_rayan_branch_id.py  0010_alter_basebankbranch_unique_together.py  0011_basecities_sejam_id.py  0012_basebank_sejam_id.py  0013_auto_20220928_0804.py  0014_auto_20221010_1142.py  0015_basefund.py  0016_auto_20221108_0703.py
customer/: models.py
customer/migrations/: 0001_initial.py  0002_customer_rayan_customer_id.py  0003_remove_basemebbcocustomergroup_created_at_and_more.py  0004_remove_customerphoneperson_created_at_and_more.py  0005_alter_customerbrokerbourseaccounts_is_default.py  0006_alter_customerbankaccount_shaba.py  0007_remove_customerportfo_created_at_and_more.py  0008_alter_customerfund_fullname.py  0009_remove_customerstate_created_at_and_more.py  0010_auto_20220920_0901.py  0011_alter_customerfinancialinfo_c_exchange_tranasction_and_more.py  0012_customerfund_fund.py  0013_auto_20221108_0724.py
customer_service/: asgi.py  settings.py  urls.py  wsgi.py
log/apt/: eipp.log.xz
service/server/: handler.py  service.py
(+37 files in other folders)
